@@ -116,8 +116,8 @@
             "Type": "Eco.Mods.TechTree.CamasBulbItem, Eco.Mods"
           },
           "ResourceRange": {
-            "min": 2,
-            "max": 7
+            "min": 1,
+            "max": 4
           },
           "ResourceBonusAtGrowth": 0.9,
           "ReleasesCO2ppmPerDay": -0.001
@@ -234,7 +234,7 @@
           },
           "ResourceRange": {
             "min": 1,
-            "max": 8
+            "max": 4
           },
           "ResourceBonusAtGrowth": 0.9,
           "ReleasesCO2ppmPerDay": -0.001
@@ -962,7 +962,7 @@
           },
           "ResourceRange": {
             "min": 1,
-            "max": 5
+            "max": 3
           },
           "ResourceBonusAtGrowth": 0.9,
           "ReleasesCO2ppmPerDay": -0.001
@@ -1078,8 +1078,8 @@
             "Type": "Eco.Mods.TechTree.HuckleberriesItem, Eco.Mods"
           },
           "ResourceRange": {
-            "min": 2,
-            "max": 9
+            "min": 1,
+            "max": 5
           },
           "ResourceBonusAtGrowth": 0.9,
           "ReleasesCO2ppmPerDay": -0.001
@@ -1189,7 +1189,7 @@
           },
           "ResourceRange": {
             "min": 1,
-            "max": 3
+            "max": 2
           },
           "ResourceBonusAtGrowth": 0.9,
           "ReleasesCO2ppmPerDay": -0.0001
@@ -1480,7 +1480,7 @@
           },
           "ResourceRange": {
             "min": 1,
-            "max": 6
+            "max": 3
           },
           "ResourceBonusAtGrowth": 0.9,
           "ReleasesCO2ppmPerDay": -0.001
@@ -1597,7 +1597,7 @@
           },
           "ResourceRange": {
             "min": 1,
-            "max": 6
+            "max": 3
           },
           "ResourceBonusAtGrowth": 0.9,
           "ReleasesCO2ppmPerDay": -0.001
@@ -1824,7 +1824,7 @@
           },
           "ResourceRange": {
             "min": 1,
-            "max": 4
+            "max": 2
           },
           "ResourceBonusAtGrowth": 0.9,
           "ReleasesCO2ppmPerDay": -0.001
@@ -2055,8 +2055,8 @@
             "Type": "Eco.Mods.TechTree.PlantFibersItem, Eco.Mods"
           },
           "ResourceRange": {
-            "min": 2,
-            "max": 6
+            "min": 1,
+            "max": 3
           },
           "ResourceBonusAtGrowth": 0.9,
           "ReleasesCO2ppmPerDay": -0.001
@@ -2173,7 +2173,7 @@
           },
           "ResourceRange": {
             "min": 1,
-            "max": 5
+            "max": 3
           },
           "ResourceBonusAtGrowth": 0.9,
           "ReleasesCO2ppmPerDay": -0.001
@@ -2289,8 +2289,8 @@
             "Type": "Eco.Mods.TechTree.BeansItem, Eco.Mods"
           },
           "ResourceRange": {
-            "min": 2,
-            "max": 10
+            "min": 1,
+            "max": 5
           },
           "ResourceBonusAtGrowth": 0.9,
           "ReleasesCO2ppmPerDay": -0.001
@@ -3516,7 +3516,7 @@
           },
           "ResourceRange": {
             "min": 1,
-            "max": 6
+            "max": 3
           },
           "ResourceBonusAtGrowth": 0.9,
           "ReleasesCO2ppmPerDay": -0.001
@@ -3621,7 +3621,7 @@
           },
           "ResourceRange": {
             "min": 1,
-            "max": 4
+            "max": 2
           },
           "ResourceBonusAtGrowth": 0.9,
           "ReleasesCO2ppmPerDay": -0.001
@@ -3726,7 +3726,7 @@
           },
           "ResourceRange": {
             "min": 1,
-            "max": 4
+            "max": 2
           },
           "ResourceBonusAtGrowth": 0.9,
           "ReleasesCO2ppmPerDay": -0.001
@@ -4369,7 +4369,7 @@
           },
           "ResourceRange": {
             "min": 1,
-            "max": 10
+            "max": 5
           },
           "ResourceBonusAtGrowth": 0.9,
           "ReleasesCO2ppmPerDay": -0.0001
