@@ -1,0 +1,36 @@
+<b><color=green>.:: GENERAL INFORMATION ::.</color></b>
+The idea behind this modkit was to make the game more of a challenge, force collaborations and at the same time add a bit of realism to it. The key is to work together or else you won't succeed in shooting down the meteor in time.
+
+Down below is a list of things we've added to the game, we do recommend you to also have a look at the changelog of the modkit because alot of changes are not listed down below.
+
+<b><color=green>.:: CRAFTING COMPONENTS ::.</color></b>
+Bone, Book, Glue, Hinge, Glass Jar, Nails, Rope, Rubber, String, Wooden Gear
+
+<b><color=green>.:: FOOD ITEMS ::.</color></b>
+Clam Chowder, Exotic Urchin Surprise, Granola Bar, Grilled Salmon, Pizza, Salmon Fillet, Smoked Trout Salad, Stuffed Clams, Sushi, Taiyaki, Trout Fillet, Tuna Fillet, Tuna Sandwich
+
+<b><color=green>.:: WORLD OBJECTS ::.</color></b>
+Cardboard Box
+
+<b><color=green>.:: MISC ITEMS ::.</color></b>
+Coin
+
+<b><color=green>.:: USER COMMANDS ::.</color></b>
+<b>/changelog</b> - Display the changelog of the modkit
+<b>/confirmsuperskill</b> - Confirm Super Skills
+<b>/houseranking</b> - Display the users with highest housing rates
+<b>/modkit</b> - Display information about the modkit
+<b>/report</b> - Report a player or an issue
+<b>/rules</b> - Display the Server Rules
+<b>/superskillshelp</b> - Display an infobox about Super Skills
+
+<b><color=green>.:: ADMIN COMMANDS ::.</color></b>
+<b>/reports</b> - Display current Reports
+<b>/clearreports</b> - Delete all current reports
+<b>/unclaimselect</b> - Select owner of the plot you're standing on
+<b>/unclaimconfirm</b> - Unclaim all properties of selected player
+
+<b><color=purple>.:: DEVELOPERS ::.</color></b>
+Yamor - Code
+Ekke - Code
+Rune - Art
